1998-04-02  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* TkExtra.m (ensureBltSupportFiles): Cope with the inability
	to find the Swarm source tree; use the current directory.
	([TkExtra -preInitWithArgc:argv:]): Load bltGraph.tcl instead
	of setting up the autoload path.  Look for word.tcl in the
	current directory if there is not value for [info library].

1998-03-31  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ZoomRaster.m ([ZoomRaster -handleConfigureWidth:Height:]): Don't
	adjust newWidth unless there is disagreement between the computed
	width and height zoom.

1998-03-29  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* win32dib.c (dib_createBitmap): Round frameWidth up to 4.
	(dib_blit, dib_paintBlit): Round down in case width + x exceeds
	frameWidth.

	* internal.m (tkobjc_raster_clear): New function.

	* internal.h: Declare tkobjc_raster_clear.

	* ZoomRaster.m ([ZoomRaster -_setConfigureInfo_:]): New method.
	([ZoomRaster -createEnd]): Call _setConfigureInfo_ for Configure
	and Expose instead of just a (inline) Configure.
	([ZoomRaster -handleConfigureWidth:Height:]): Let newWidth exceed
	newHeight (Win32 seems to like to think better of small window
	widths).
	([ZoomRaster -handleExposeWidth:Height:]): New method.  Calls
	tkobjc_raster_clear for new extent.

	* ZoomRaster.h: Declare handleExposeWidth:Height:.

	* Raster.m ([Raster +createBegin:]): Define default 
	width and height in a createBegin, not createEnd.

	* Raster.h: Declare createBegin and createEnd.

1998-03-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* TkExtra.m (ensureBltSupportFiles): Don't call getSwarmHome
	twice; use the local variable.  Duplicate basePath so that it
	may be printed later in a diagnostic message.

1998-03-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m: Don't include stdlib.h.
	(setSecondaryPath): Now takes `arguments' argument to get swarmHome
	instead of using SWARMHOME environment variable.
